# Data-Analysis

./: .gitignore  MLB_elo.ipynb  README.md  pyproject.toml
baseball_elo/: baseball_elo.ipynb  data_prep.ipynb  final.ipynb  get_records.ipynb  get_records.py  hyperparam_tuning.ipynb  multi_season_elo.ipynb  single_season_elo.ipynb
baseball_elo/data/: prepared_game_data.parquet  teams.csv
baseball_elo/data/singleseason/2024csvs/: 2024teamstats.csv
baserunning/: basestealing_exploration.ipynb
baserunning/data/: 90_ft_running_splits.csv  baserunning_run_value.csv  basestealing_run_value.csv  extra_bases_taken_run_value.csv  sprint_speed.csv
data/mlb_elo/: 2024gameinfo.csv
following_the_book/: thebook.ipynb
postseasonvsregularseason/: postseason_vs_regular.ipynb
