[project]
name = "data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "matplotlib>=3.10.5",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "playwright>=1.54.0",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pybaseballstats>=0.3.11",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
